make headlines even smaller to prevent overflow on small mobile devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,11 +361,11 @@ h6 {
 }
 
 h2 {
-	font-size: 2.5rem;
+	font-size: 2rem;
 }
 
 h3 {
-	font-size: 2rem;
+	font-size: 1.6rem;
 }
 
 h4 {
